--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,120 @@
-body{
+@font-face {
+    font-family: "Regular";
+    /*Can be any text*/
+    src: local("AirbnbCerealLight"),
+        url("./fonts/Ubuntu-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Medium";
+    /*Can be any text*/
+    src: local("AirbnbCerealLight"),
+        url("./fonts/Ubuntu-Medium.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Bold";
+    /*Can be any text*/
+    src: local("AirbnbCerealLight"),
+        url("./fonts/Ubuntu-Bold.ttf") format("truetype");
+}
+
+
+
+root {
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
-.flex-center{
+
+
+.main-container {
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
+    margin: auto;
+    margin-top: 3em;
+    margin-bottom: 2em;
+    height: 80%;
+    width: 60%;
+    background-color: rgb(244, 237, 237);
+}
+
+
+.flex-center {
     display: flex;
     align-items: center;
 }
-.row{
+
+
+.flex-vert-specebtw {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+
+
+.flex-btn {
+    margin-bottom: 1em;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+
+.row {
     flex-direction: row;
+}
+
+.bold {
+    font-family: Bold;
+}
+
+.regular {
+    font-family: Regular;
+}
+
+.medium {
+    font-family: Medium;
+}
+
+.bottom {
+    align-self: end;
+}
+
+.top {
+    align-self: start;
+}
+
+.gray {
+    color: rgb(165, 159, 159);
+}
+
+.invisible {
+    visibility: hidden;
+}
+
+.btn {
+    border: none;
+    border-radius: 5px;
+}
+
+.btn-blue {
+
+    background-color: #03295a;
+    color: rgb(244, 237, 237);
+}
+
+.btn-white {
+    background-color: rgb(244, 237, 237);
+    color: #03295a;
 }
