--- a/src/pages/Step/Step.module.css
+++ b/src/pages/Step/Step.module.css
@@ -1,4 +1,5 @@
 .step {
+
     color: white;
     margin: 10px;
     font-size: 0.5em;
@@ -11,12 +12,15 @@
     justify-content: center;
 }
 
-.step-description{
+.step-description {
+    margin-right: 6em;
+    height: min-content;
+
     color: white;
     font-size: 0.5em;
-    display:flex;
+    display: flex;
     flex-direction: column;
-    align-items: start;
+
     justify-content: center;
-    gap: 0.2em;
+
 }
