--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -1,6 +1,8 @@
 .layoutContainer {
+    display: flex;
+    justify-content: space-between;
     background-color: rgb(244, 237, 237);
-    width: 100vh;
-    height: 80vh;
+    width: 100%;
+    height: 100%;
     display: flex;
 }
