--- a/src/index.css
+++ b/src/index.css
@@ -41,8 +41,8 @@ root {
     margin: auto;
     margin-top: 3em;
     margin-bottom: 2em;
-    height: 80vh;
-    width: 80vh;
+    height: 90vh;
+    width: 90vh;
     background-color: rgb(244, 237, 237);
 }
 
@@ -65,6 +65,7 @@ root {
 
 .flex-btn {
     margin-bottom: 1em;
+    margin-right: 1em;
     display: flex;
     justify-content: space-around;
     width: 100%;
@@ -104,9 +105,16 @@ root {
 }
 
 .btn {
+    width: 8em;
+    height: 3em;
     border: none;
     border-radius: 5px;
 }
+
+.btn:hover {
+    background-color: #938cfe;
+}
+
 
 .btn-blue {
 
